--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
       <div class="jabquiz">
         <div class="jabquiz__question-box">
-          <h1 class="jabquiz__question">Who is the first president of the United States</h1>
-          <p class="jabquiz__tracker">1 of 7</p>
+          <h1 class="jabquiz__question"></h1>
+          <p class="jabquiz__tracker"></p>
           <div class="progress">
             <div class="progress__inner"></div>
           </div>
@@ -21,34 +21,7 @@
         </div>
         <div class="jabquiz__choices-box">
           <ul class="jabquiz__choices">
-            <li class="jabquiz__choice">
-              <input type="radio" name="choice" class="jabquiz__input" id="choice0">
-              <label for="choice0" class="jabquiz__label">
-                <i></i>
-                Something Else
-              </label>
-            </li>
-            <li class="jabquiz__choice">
-              <input type="radio" name="choice" class="jabquiz__input" id="choice1">
-              <label for="choice1" class="jabquiz__label">
-                <i></i>
-                Michael Jackson
-              </label>
-            </li>
-            <li class="jabquiz__choice">
-              <input type="radio" name="choice" class="jabquiz__input" id="choice2">
-              <label for="choice2" class="jabquiz__label">
-                <i></i>
-                Lady Gaga
-              </label>
-            </li>
-            <li class="jabquiz__choice">
-              <input type="radio" name="choice" class="jabquiz__input" id="choice3">
-              <label for="choice3" class="jabquiz__label">
-                <i></i>
-                Martin Luther King Jr.
-              </label>
-            </li>
+            
           </ul>
         </div>
 
